feat: Added function to copy code on colorDisplay

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+  <div id="successMessage"></div>
   <h1>Basics of CSS - Module 1</h1>
 
   <div class="play-area">
@@ -35,8 +36,8 @@
       <h1 class="transparent">CSS is fun!</h1>
       <div id="colorDisplay">
         <h2 id="rgbDisplay"></h2>
-        <button id="toggleButton">RGB</button>
       </div>
+      <button id="toggleButton">RGB</button>
     </div>
   </div>
 
