--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <div class="color-display__container">
       <h1 class="transparent">CSS is fun!</h1>
       <div id="colorDisplay">
-        <div style='white-space: nowrap;' id="rgbDisplay" autofocus contenteditable></div>
+        <div style='white-space: nowrap;' id="rgbDisplay" contenteditable></div>
       </div>
       <button id="toggleButton">RGB</button>
     </div>
