--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Playground for RGB and HEX color">
   <title>Color Play | Playground for RGB and HEX color</title>
+  <link rel="shortcut icon" href="./favicon.png" type='image/png'>
   <link rel="stylesheet" href="index.css">
   <!-- for the minified version -->
   <script src="https://cdn.jsdelivr.net/gh/EmekaOrji/loud-it@1.0.1/assets/js/loud-it.min.js" type='module'></script>
